fix!(padding): heading padding in html as well as line break in typst

--- a/performanceval/style.css
+++ b/performanceval/style.css
@@ -134,7 +134,7 @@ h2,
 h3 {
   text-align: center;
   color: var(--heading-color);
-  margin-bottom: 0.5rem;
+  margin-bottom: -1rem;
 }
 
 hr {
